force-app/main/default/objects/Cours__c/Cours__c.object-meta.xml
<CustomObject>
    <label>Cours</label>
    <nameField>
        <label>Nom cours</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>