force-app/main/default/objects/Cours__c/fields/professeur__c.field-meta.xml
<CustomField>
    <fullName>professeur__c</fullName>
    <label>professeur</label>
    <referenceTo>Professeur__c</referenceTo>
    <relationshipLabel>Cours</relationshipLabel>
    <relationshipName>Cours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>