force-app/main/default/objects/Cours__c/fields/salle__c.field-meta.xml
<CustomField>
    <fullName>salle__c</fullName>
    <label>Salle</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>